--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 authors = ["Tim Mathews <tim@signalk.org>"]
 license = "Apache-2.0"
 
+[[bin]]
+name = "printlist"
+doc = false
+
 [dependencies]
